<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
	    <project.version>2.0.8-RELEASE</project.version>
    </properties>
    
	<groupId>fr.cirad</groupId>
	<artifactId>Mgdb2BrapiV2Impl</artifactId>
	<packaging>jar</packaging> 
    <version>${project.version}</version>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
    </build>
    <dependencies>
        <dependency>
  			<groupId>fr.cirad</groupId>
			<artifactId>Mgdb2BrapiImpl</artifactId>
			<version>1.1.8-RELEASE</version>
        </dependency>
        <dependency>
            <groupId>fr.cirad</groupId>
            <artifactId>Mgdb2Export</artifactId>
            <version>2.9-RELEASE</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
 		<dependency>
    		<groupId>javax.servlet</groupId>
    		<artifactId>javax.servlet-api</artifactId>
    		<version>4.0.1</version>
    		<scope>provided</scope>
    	</dependency>

		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.3.1</version>
		</dependency>
        
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		    <version>2.8.6</version>
		</dependency>

        <dependency>
            <groupId>com.github.joschi.jackson</groupId>
            <artifactId>jackson-datatype-threetenbp</artifactId>
            <version>2.13.5</version>
        </dependency>
    <!-- Bean Validation API support -->
		<dependency>
		    <groupId>javax.validation</groupId>
		    <artifactId>validation-api</artifactId>
		    <version>1.1.0.Final</version>
		</dependency>
                <dependency>
            <groupId>fr.cirad</groupId>
            <artifactId>Mgdb2BrapiModel</artifactId>
            <version>1.0.6-RELEASE</version>
            <type>jar</type>
        </dependency>
    </dependencies>
</project>
